# midi_fundsp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
examples/: basic_demo.rs  choice_demo.rs  intercept_message_demo.rs  midi_only_demo.rs  msg_view_demo.rs  note_velocity_demo.rs  show_sound_values.rs  stereo_demo.rs  well_tempered_demo.rs
src/: io.rs  lib.rs  main.rs  sound_builders.rs  sounds.rs  tunings.rs
