[package]
name = "midi_fundsp"
version = "0.3.0"
edition = "2021"
description = "Enables creation of live MIDI synthesizer software."
readme = "README.md"
homepage = "https://github.com/gjf2a/midi_fundsp"
repository = "https://github.com/gjf2a/midi_fundsp"
license = "MIT OR Apache-2.0"
keywords = ["music", "midi", "synthesizer", "synth", "audio"]
categories = ["hardware-support", "multimedia::audio"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fundsp = { version = "0.15.0", default-features = false}
midir = "0.9"
cpal = "0.15"
anyhow = "1"
midi-msg = "0.5.0"
bare_metal_modulo = "1"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
read_input = "0.8"
