[package]
name = "midi_fundsp"
version = "0.6.10"
edition = "2024"
description = "Enables creation of live MIDI synthesizer software."
readme = "README.md"
homepage = "https://github.com/gjf2a/midi_fundsp"
repository = "https://github.com/gjf2a/midi_fundsp"
license = "MIT OR Apache-2.0"
keywords = ["music", "midi", "synthesizer", "synth", "audio"]
categories = ["hardware-support", "multimedia::audio"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fundsp = {version = "0.23.0", features = ["std", "fft"]}
midir = "0.10.3"
cpal = "0.17.1"
anyhow = "1.0.100"
midi-msg = "0.8.1"
bare_metal_modulo = "1.2.5"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
read_input = "0.8.6"
float_eq = "1.0.1"
num-rational = "0.4.2"